feat: use virtual threads for worker job threads